<resources>
    <string name="app_name">LinkUp App V1</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="linkUp">LinkUp</string>
    <string name="register">Register</string>
    <string name="clickToLogin">Ready To Login</string>
    <string name="notRegisteredYet">Not Registered Yet</string>
    <string name="home_icon">Home</string>
    <string name="chat_icon">LinkUp</string>
    <string name="profile_icon">Profile</string>
    <string name="settings_icon">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="userProfileImage">user image</string>
    <string name="know_me">Know Me</string>
    <string name="favouriteInterests">Favourite interests (e.g Coding, Reading)</string>
    <string name="locationHelperText">City only for safety purposes (e.g Auckland)</string>
</resources>