<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="184dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/linkup_icon1bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="100dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="30sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:hint="@string/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:hint="@string/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/loginProgressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LogIn"
            android:textSize="20sp"
            android:layout_marginTop="16dp"/>

        <!-- For Not Registered yet In -->
        <TextView
            android:id="@+id/clickToRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notRegisteredYet"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="30dp"/>

    </LinearLayout>

</LinearLayout>