<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="184dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/linkup_icon1bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="100dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="30sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regEmail"
                android:hint="@string/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regPassword"
                android:hint="@string/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Adding a progress bar -->
        <ProgressBar
            android:id="@+id/regProgressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/regButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textSize="20sp"
            android:layout_marginTop="16dp"/>

        <!-- For Login In -->
        <TextView
            android:id="@+id/regLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clickToLogin"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="30dp"/>

    </LinearLayout>
</LinearLayout>